<resources>
    <string name="app_name">WeatherMap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cant_load_data">Can not load data</string>
    <string name="retry">Retry</string>
    <string name="add_city">Add city</string>
    <string name="help">Help</string>
    <string name="add_your_favourite_cities_here">Add your favourite cities here</string>
    <string name="unrecognized_city">City is not recognised</string>
    <string name="settings">Settings</string>
    <string name="bookmark_city">Bookmark city</string>
    <string name="are_you_sure_you_want_to_add_this_city">Are you sure you want to bookmark %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>

    <string name="temperature_is">Temperature: %1$.0f°%2$s</string>
    <string name="min_temperature_is">Min Temperature: %1$.0f°%2$s</string>
    <string name="max_temperature_is">Max Temperature: %1$.0f°%2$s</string>
    <string name="humidity_is">Humidity: %1$.0f%%</string>
    <string name="rain_is">Rain Chance: %1$.0f%%</string>
    <string name="wind_direction_is">Wind degree: %1$.2f°</string>
    <string name="wind_speed_is">Wind speed: %1$.2f</string>

    <string name="lorem_ipsum">\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce mollis ipsum et bibendum porttitor. Donec accumsan arcu tristique tortor pellentesque, sed tempus lorem mollis. Sed id magna sed neque dictum dictum vitae ut leo. Mauris ultricies, dolor nec vehicula maximus, velit diam fringilla nisl, vitae eleifend nibh velit vitae arcu. Integer non pharetra tortor. Nam vehicula mi non est porta consequat in id elit. Nam vitae cursus enim. Nunc efficitur, mi eu consectetur congue, odio sapien pharetra ante, sit amet tincidunt ligula nibh pellentesque neque. Etiam ullamcorper, risus ac dignissim pretium, odio diam vehicula justo, quis accumsan nunc lorem ut justo. Etiam eleifend, nibh in porta porta, urna metus iaculis nisi, vitae sodales est purus eget neque.</string>
    <string name="forecast">Forecast</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="unit_system">Unit system</string>
    <string name="reset_bookmarks">Reset bookmarks</string>
    <string name="all_bookmarks_removed">All bookmarks are removed</string>
</resources>
